--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -23,6 +23,12 @@
         <version>${project.version}</version>
     </dependency>
     <dependency>
+        <groupId>org.java-websocket</groupId>
+        <artifactId>Java-WebSocket</artifactId>
+        <version>1.5.4</version>
+    </dependency>
+
+    <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
         <version>2.10.1</version>
