--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
+spring.jpa.show-sql=true
