--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.6.0</version>
-                <executions>
+               <!-- <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
@@ -109,7 +109,7 @@
                             </descriptorRefs>
                         </configuration>
                     </execution>
-                </executions>
+                </executions>-->
             </plugin>
         </plugins>
     </build>
