--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-Models/bin
+models/bin/*
+Models/bin/*
 
 .idea/**/workspace.xml
 .idea/**/tasks.xml
